--- a/meta/two_columns.css
+++ b/meta/two_columns.css
@@ -1,3 +1,11 @@
+body {
+  background-image: url("../data/bg.jpg");
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .row {
   display: flex;
 }
